# CastleKV

./: .gitignore  Cargo.toml  LICENSE  README.md  raft_state
.github/workflows/: build_and_test.yml
benchmark/: Cargo.toml
benchmark/src/: config.rs  lib.rs  main.rs  metrics.rs  workload.rs
benchmark/src/workload/: load.rs  random.rs  uniform.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: id.rs  lib.rs  session.rs
config/: 1-node.yaml  2-node-1.yaml  2-node-2.yaml
manager/: Cargo.toml
manager/src/: lib.rs  main.rs  service.rs  storage.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: gateway.proto  manager.proto  raft.proto
rpc/src/: lib.rs
server/: Cargo.toml
server/src/: comm.rs  config.rs  database.rs  executor.rs  gateway.rs  http.rs  lib.rs  lock_manager.rs  log_manager.rs  main.rs  metrics.rs  plan.rs  storage.rs
server/src/log_manager/: comm.rs  manager.rs  mod.rs  persistent_states.rs  raft_persistent.rs  raft_service.rs  raft_session.rs  storage.rs
server/tests/: test_storage.rs
tools/telemetry/: docker-compose.yaml  prometheus.yml
