[workspace]
members = ["common", "client", "server", "rpc", "benchmark", "manager"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.3", features = ["derive"] }
console-subscriber = "0.4.1"
futures = "0.3"
glob = "0.3"
prost = "0.13.4"
rustc-hash = "2.1.1"
rustyline = "15.0.0"
serde = { version = "1.0", features = ["derive", "rc"] }
sled = "0.34.7"
tempfile = "3.17.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12.3"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3" }

# Local crates
benchmark = { path = "./benchamrk" }
client = { path = "./client" }
common = { path = "./common" }
rpc = { path = "./rpc" }
server = { path = "./server" }
manager = { path = "./manager" }
