[workspace]
members = ["common", "client", "server", "rpc", "benchmark", "manager"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
axum = "0.8"
bincode = "1.3"
clap = { version = "4.5.37", features = ["derive"] }
console-subscriber = "0.4.1"
confy = "1.0.0"
futures = "0.3"
glob = "0.3"
histogram = "0.9.1"
lazy_static = "1.5"
prometheus = "0.14"
prost = "0.13.5"
rand = { version = "0.9.1", features = ["std", "std_rng"] }
rustc-hash = "2.1.1"
rustyline = "16.0.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
sled = "0.34.7"
tempfile = "3.17.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.13.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3" }

# Local crates
benchmark = { path = "./benchamrk" }
client = { path = "./client" }
common = { path = "./common" }
rpc = { path = "./rpc" }
server = { path = "./server" }
manager = { path = "./manager" }
