[package]
name = "benchmark"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
common.workspace = true
histogram.workspace = true
rand.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
rpc.workspace = true
serde_json.workspace = true