[package]
name = "common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber.workspace = true
rpc = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
