[package]
name = "server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
common.workspace = true
rpc.workspace = true
sled.workspace = true
tempfile.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
glob = "0.3"