[package]
name = "server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
confy.workspace = true
futures.workspace = true
clap.workspace = true
common.workspace = true
glob.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
rand.workspace = true
rpc.workspace = true
sled.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true